tests/baselines/reference/staticAsIdentifier.errors.txt
tests/cases/compiler/staticAsIdentifier.ts(12,12): error TS1030: 'static' modifier already seen.
tests/cases/compiler/staticAsIdentifier.ts(16,12): error TS1030: 'static' modifier already seen.


==== tests/cases/compiler/staticAsIdentifier.ts (2 errors) ====
    class C1 {
        static static
        [x: string]: string;
    }
    
    class C2 {
        static static
        m() {}
    }
    
    class C3 {
        static static p: string;
               ~~~~~~
!!! error TS1030: 'static' modifier already seen.
    }
    
    class C4 {
        static static foo() {}
               ~~~~~~
!!! error TS1030: 'static' modifier already seen.
    }
    